--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -201,14 +201,15 @@ aside .long-header{
 	font-size: 20px;
 	font-weight: bolder;
 	background-color: #f4f4f4;
-	/*#fff9c4*/
-	background-image: -webkit-linear-gradient(top left, #fdd835, #ffee58, #ffeb3b);
-	background-image: -o-linear-gradient(top left, #fdd835, #ffee58, #ffeb3b);
-	background-image: linear-gradient(to bottom right, #fdd835, #ffee58, #ffeb3b);
-
 	line-height: 190px;
 	padding: 60px 30px;
 	box-sizing: border-box;
+
+	/*background-image: -webkit-linear-gradient(top left, #fdd835, #ffee58, #ffeb3b);
+	background-image: -o-linear-gradient(top left, #fdd835, #ffee58, #ffeb3b);
+	background-image: linear-gradient(to bottom right, #fdd835, #ffee58, #ffeb3b);*/
+	background: #E91E63;
+	color: #fff;
 }
 
 aside ul{
