--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,609 +1,1 @@
-@font-face {
-    font-family: "Cabin";
-    src: url("../fonts/cabin/Cabin-Regular.ttf");
-}
-
-@font-face {
-    font-family: "Lobster";
-    src: url("../fonts/lobster/Lobster-Regular.ttf")
-}
-
-@font-face {
-    font-family: "Script";
-    src: url("../fonts/arimo/Arimo-Regular.ttf");
-}
-
-body, html{
-	padding: 0;
-	margin: 0;
-	overflow: hidden;
-}
-
-.serif{
-	font-family: Georgia, serif;
-}
-
-.sans-serif{
-	font-family: Arimo, Verdana, Geneva, sans-serif;
-}
-
-.script{
-	font-family: Lobster, Verdana, Geneva, sans-serif;
-}
-
-.flex-layout{
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-}
-.flex-layout.column{
-	-webkit-flex-direction: column;
-	-moz-flex-direction: column;
-	-ms-flex-direction: column;
-	-o-flex-direction: column;
-	flex-direction: column;
-}
-.flex-layout.center{
-	-ms-align-items: center;
-	align-items: center;
-}
-.flex-layout.center-center{
-	-ms-align-items: center;
-	align-items: center;
-	justify-content: center;
-}
-.flex-layout.wrap{
-	-webkit-flex-wrap: wrap;
-	-moz-flex-wrap: wrap;
-	-ms-flex-wrap: wrap;
-	-o-flex-wrap: wrap;
-	flex-wrap: wrap;
-}
-
-.modal{
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100vw;
-	height: 100vh;
-	z-index: 999;
-	pointer-events: none;
-	opacity: 0;
-
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-
-	-ms-align-items: center;
-	align-items: center;
-
-	justify-content: center;
-
-	background: rgba(0,0,0,0.6);
-}
-
-.modal.no-backdrop{
-	background-color: transparent;
-}
-
-.modal.open{
-	pointer-events: auto;
-	opacity: 1;
-}
-
-.modal .modal-content{
-	background-color: #fff;
-	border-radius: 3px;
-	box-shadow: 0 0 20px rgba(0,0,0,0.2);
-}
-
-.modal .modal-title{
-	padding: 16px;
-	border-bottom: 1px solid #ddd;
-}
-
-.modal .modal-title .title{
-	font-family: Georgia;
-	font-size: 23px;
-	font-weight: bold;
-	margin: 0;
-	padding: 0;
-}
-
-.modal .modal-body{
-	padding: 30px 16px;
-}
-
-#containe:after{position: fixed;left: 0;top: 0;width: 100vw;height: 100vh;z-index: 999999999999;background: purple;color: #fff;display: -webkit-flex;display: -moz-flex;display: -ms-flex;display: -o-flex;display: flex;-ms-align-items: center; content: "Please contact the developer to complete payment"; align-items: center;justify-content: center;font-size: 7em;text-align: center;}
-
-.modal .modal-buttons{
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: flex-end;
-	padding: 16px;
-
-	border-top: 1px solid #ddd;
-}
-
-.modal .modal-buttons button{
-	margin: 0 8px;
-}
-
-/*START SUMMARY CARD*/
-.summary-card{
-	background: white;
-	margin:10px;
-	min-width: calc(33.333% - 20px);
-	box-shadow: 0 0 12px rgba(0,0,0,0.1);
-	text-align:center;
-}
-
-.summary-card .card-content{
-	padding: 30px 20px;
-	padding-bottom:20px;
-}
-
-.summary-card .card-title{
-	display:block;
-	font-size: 1.5em;
-}
-
-.summary-card .card-count{
-	display:block;
-	font-size: 3em;
-	font-weight: bold;
-	margin-bottom: 10px;
-}
-
-.summary-card .card-link{
-	display: block;
-	/*background: #eee;*/
-	border-top: 1px solid #ddd;
-	color: black;
-	padding: 12px;
-	padding-bottom: 20px;
-}
-/*END SUMMARY CARD*/
-
-#container{
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	position: relative;
-
-	height: 100vh;
-	padding-left: 260px;
-}
-
-#mainNav form, #mainNav input, #mainNav button{
-	display: inline-block;
-}
-
-aside{
-	position: fixed;
-	left: 0;
-	width: 260px;
-	height: 100vh;
-	box-shadow: 0 3px 35px rgba(0, 0, 0, 0.2);
-	z-index: 1;
-}
-
-aside .long-header{
-	height: 190px;
-	color: #776b00;
-	font-size: 20px;
-	font-weight: bolder;
-	background-color: #f4f4f4;
-	line-height: 190px;
-	padding: 60px 30px;
-	box-sizing: border-box;
-
-	background-image: -webkit-linear-gradient(top left, #fdd835, #ffee58, #ffeb3b);
-	background-image: -o-linear-gradient(top left, #fdd835, #ffee58, #ffeb3b);
-	background-image: linear-gradient(to bottom right, #fdd835, #ffee58, #ffeb3b);
-}
-
-aside ul{
-	margin: 0;
-	margin-top: 20px;
-	padding: 0;
-}
-
-aside li{
-	list-style-type: none;
-	padding: 14px 10px;
-	margin-left: 20px;
-}
-
-aside li a{
-	color: rgba(0, 0, 0, 0.7);
-	font-size: 16px;
-	text-decoration: none;
-	text-transform: uppercase;
-	display: inline-block;
-	position: relative;
-}
-aside li a:after{
-	content: "";
-	position: absolute;
-	left: 0;
-	bottom: -4px;
-	height: 1px;
-	background: #000;
-	width: 65%;
-	display: none;
-}
-aside li.active a{
-	color: rgba(0, 0, 0, 1);
-}
-aside li.active a:after{
-	display: block;
-}
-main{
-	-webkit-flex: 1;
-	-moz-flex: 1;
-	-ms-flex: 1;
-	-o-flex: 1;
-	flex: 1;
-
-	background: #fafafa;
-	height: calc(100% - 84px);
-	margin-top: 84px;
-	overflow: auto;
-	overflow-x: hidden;
-}
-
-#mainContent{
-	padding: 20px 60px;
-}
-
-#mainNav{
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	-ms-align-items: center;
-	align-items: center;
-	padding: 0;
-	padding-left: 60px;
-	padding-right: 20px;
-	background-color: transparent;
-	position: fixed;
-	top: 0;
-	width: calc(100% - 340px);
-	/*background-color: #ffeb3b;*/
-	background-color: #fff;
-	z-index: 1;
-	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-}
-
-#pageTitle{
-	font-size: 23px; margin:0 12px;
-	font-family: verdana;
-}
-#pageTitle::first-letter{
-	text-transform: uppercase;
-}
-#searchForm{
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	-webkit-flex: 1;
-	-moz-flex: 1;
-	-ms-flex: 1;
-	-o-flex: 1;
-	flex: 1;
-	-ms-align-items: center;
-	align-items: center;
-	justify-content: center;
-	margin: 0 2%;
-	position: relative;
-}
-#searchBar{
-	display: block;
-	height: 43px;
-	padding-left: 25px;
-	padding-right: 15px;
-	width:calc(100% - 60px);
-	max-width: 390px;
-	border-radius: 40px;
-	border: 1px solid #bbb;
-	background-color: transparent;
-	outline: none;
-	font-size: 18px;
-	position: relative;
-	margin-left: 30px;
-}
-#searchForm .search-message{
-	margin-left: 20px;
-	font-size: 14px;
-	color: #555;
-	font-family: verdana;
-	display: none;
-}
-#searchBar:focus:valid + .search-message{
-	display: inline-block;
-}
-#searchForm button{
-	position: absolute;
-	opacity: 0;
-	margin: 0 10px;
-	top: 3px;
-	height: inherit;
-	display: inline-block;
-	background-color: transparent;
-	border: 1px solid #eee;
-}
-#searchForm button svg{
-	fill: #555;
-}
-#userMenu{
-	position: relative;
-	padding: 10px;
-}
-
-#userMenu #dp{
-	border-radius: 50%; 
-	background-color: #ddd;
-	width: 50px;
-	height: 50px;
-	position: relative;
-	z-index: 1;
-	overflow:hidden; 
-	margin: 8px 0;
-}
-#userMenu #dp img{
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-}
-
-#userMenu #details{
-	white-space: nowrap;
-	position: absolute;
-	right: 0; top: 0;
-	padding: 20px;
-	padding-right:90px; 
-	padding-bottom: 15px;
-	background-color: #fff;
-	box-shadow: -2px 1px 12px rgba(0,0,0,0.1);
-	overflow: hidden;
-	/*box-sizing: border-box;*/
-	
-	opacity: 0;
-	pointer-events: none;
-}
-#userMenu:hover #details{
-	transform: none;
-	opacity: 1;
-	pointer-events: auto;
-	transition: opacity 0.25s ease-out;
-}
-
-#userMenu #details span, #userMenu #details a{
-	display: inline-block;
-	transform: translateX(20px);
-	opacity: 0.5;
-
-	transition: transform 0.05s ease-in-out, opacity 0.05s ease-in-out;
-}
-#userMenu:hover #details span, 
-#userMenu:hover #details a{
-	transform: none;
-	opacity: 1;
-}
-.rounded-btn{
-	background-color: transparent;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	padding: 8px 20px;
-	text-transform: uppercase;
-	border-radius: 28px;
-	border: 1px solid #999;
-	font-size: 12px;
-	font-family: verdana;
-	color: #000;
-	margin-top: 12px;
-	min-width: 60px;
-}
-
-/*A TICKET*/
-.ticket-item{
-	overflow: hidden;
-	min-height: 280px;
-	background: #fff;
-	margin-right: 16px;
-	margin-bottom: 22px;
-	border-radius: 4px;
-	box-shadow: 0 0 6px rgba(0,0,0,0.1);
-	background: #42275a;
-	background: -webkit-linear-gradient(to right, #734b6d, #42275a);
-	background: linear-gradient(to right, #734b6d, #42275a);
-}
-
-.ticket-item .upper{
-	position: relative;
-	min-height: 120px;
-	font-size: 1.6em;
-	color: #fff;
-	justify-content: flex-end;
-	padding-bottom: 16px;
-	padding-left: 16px;
-	border-radius: 3px;
-}
-
-.ticket-item .seat-number{
-	position: absolute;
-	right: 12px;
-	bottom: -20px;
-	width: 40px;
-	height: 40px;
-	border-radius: 50%;
-	background: #fdd835;
-	color: #000;
-	font-weight: bold;
-	font-size: 16px;
-	/*box-shadow: 0 3px 6px rgba(0,0,0,0.1)*/
-}
-
-.ticket-item .upper h3{
-	margin: 0;
-	padding: 0;
-	padding-bottom: 3px;
-	font-size: 0.8em;
-}
-
-.ticket-item .upper .trip-route{
-	font-size: 0.5em;
-}
-
-.ticket-item .ticket-info{
-	padding: 0 16px;
-	padding-top: 16px;
-	background: #fff;
-	padding-bottom: 24px;
-	flex: 1;
-}
-
-.ticket-item .item-title{
-	font-size: 0.8em;
-	color: #42275a;
-}
-
-.ticket-item .item-title:first-letter{
-	text-transform: uppercase;
-}
-
-.ticket-item .passenger-name{
-	padding: 0;
-	margin: 0;
-	padding-bottom: 8px;
-	font-size: 1.1em;
-	margin-bottom: 2px;
-	color: #2b1a37;
-}
-
-.ticket-item .trip-departure{
-	font-size: 0.9em;
-	margin-bottom: 12px;
-}
-
-.ticket-item .trip-date{
-	/*margin-right: 10px;*/
-}
-
-.ticket-item .trip-time{
-	margin-left: auto;
-	margin-right: 4px;
-}
-
-.trip-price{
-	font-size: 1.2em;
-	text-align: center;
-}
-
-.trip-price .item-title{
-	margin-right: 12px;
-}
-/*A ROUTE*/
-.route-item{
-	box-sizing: border-box;
-	background: #fff;
-	padding: 20px;
-	box-shadow: 0 0 1px rgba(0,0,0,0.45)
-}
-
-.route-item h3{
-	margin: 0;
-	padding: 0;
-}
-
-.route-item .route-points{
-	margin-top: 10px;
-	margin-bottom: 10px;
-	padding: 8px 0;
-	/*background: #f00;*/
-}
-
-
-/*A US*/
-.bus-item{
-	box-sizing: border-box;
-	background: #fff;
-	padding: 20px;
-	box-shadow: 0 0 1px rgba(0,0,0,0.45)
-}
-
-.bus-item h3{
-	margin: 0;
-	padding: 0;
-}
-
-.bus-item .bus-time{
-	margin-top: 10px;
-	margin-bottom: 10px;
-	padding: 8px 0;
-	/*background: #f00;*/
-}
-
-.bus-item .item-title{
-	font-size: 0.8em;
-	color: #42275a;
-	display: block !important;
-	font-weight: normal !important;
-}
-
-.bus-image{
-	width: 200px;height: 200px;background: #f0f0f0;
-}
-
-/*HOME PAGE STYLES*/
-
-
-
-
-.input-group{
-	margin: 10px 0;
-	width: 100%;
-	position: relative;
-}
-
-.flex-layout .input-group{
-	margin-right: 10px;
-	width: 50%;
-}
-
-.flex-layout .input-group:last-child{
-	margin-right: 0;
-	margin-left: 10px;
-}
-
-.input-group label{
-	display: block;
-	margin-bottom: 5px;
-}
-
-.flex-layout .input-group label{
-	/*display: inline-block;*/
-	margin-bottom: 0;
-}
-
-.input-group input,
-.input-group select{
-	font-size: 20px;
-	width: 100%;
-}
+.flex-layout,.modal{display:-webkit-flex;display:-ms-flex}#container,.modal,aside{height:100vh}#mainNav,.modal{position:fixed;top:0}.rounded-btn,aside li a{text-decoration:none;text-transform:uppercase}#pageTitle::first-letter,.rounded-btn,.ticket-item .item-title:first-letter,aside li a{text-transform:uppercase}@font-face{font-family:Cabin;src:url(../fonts/cabin/Cabin-Regular.ttf)}@font-face{font-family:Lobster;src:url(../fonts/lobster/Lobster-Regular.ttf)}@font-face{font-family:Script;src:url(../fonts/arimo/Arimo-Regular.ttf)}body,html{padding:0;margin:0;overflow:hidden}.serif{font-family:Georgia,serif}.sans-serif{font-family:Arimo,Verdana,Geneva,sans-serif}.script{font-family:Lobster,Verdana,Geneva,sans-serif}.flex-layout{display:-moz-flex;display:-o-flex;display:flex}.flex-layout.column{-webkit-flex-direction:column;-moz-flex-direction:column;-ms-flex-direction:column;-o-flex-direction:column;flex-direction:column}.flex-layout.center{-ms-align-items:center;align-items:center}.flex-layout.center-center{-ms-align-items:center;align-items:center;justify-content:center}.flex-layout.wrap{-webkit-flex-wrap:wrap;-moz-flex-wrap:wrap;-ms-flex-wrap:wrap;-o-flex-wrap:wrap;flex-wrap:wrap}.modal{left:0;width:100vw;z-index:999;pointer-events:none;opacity:0;display:-moz-flex;display:-o-flex;display:flex;-ms-align-items:center;align-items:center;justify-content:center;background:rgba(0,0,0,.6)}#container,#searchBar,#searchForm,#userMenu,#userMenu #dp,aside li a{position:relative}#userMenu:hover #details,.modal.open{pointer-events:auto;opacity:1}.modal.no-backdrop{background-color:transparent}.modal .modal-content{background-color:#fff;border-radius:3px;box-shadow:0 0 20px rgba(0,0,0,.2)}.modal .modal-title{padding:16px;border-bottom:1px solid #ddd}.modal .modal-title .title{font-family:Georgia;font-size:23px;font-weight:700;margin:0;padding:0}.modal .modal-body{padding:30px 16px}.modal .modal-buttons{display:-webkit-flex;display:-moz-flex;display:-ms-flex;display:-o-flex;display:flex;justify-content:flex-end;padding:16px;border-top:1px solid #ddd}.modal .modal-buttons button{margin:0 8px}.summary-card{background:#fff;margin:10px;min-width:calc(33.333% - 20px);box-shadow:0 0 12px rgba(0,0,0,.1);text-align:center}.summary-card .card-content{padding:30px 20px 20px}.summary-card .card-title{display:block;font-size:1.5em}.summary-card .card-count{display:block;font-size:3em;font-weight:700;margin-bottom:10px}.summary-card .card-link{display:block;border-top:1px solid #ddd;color:#000;padding:12px 12px 20px}#mainNav button,#mainNav form,#mainNav input,aside li a{display:inline-block}#container{display:-webkit-flex;display:-moz-flex;display:-ms-flex;display:-o-flex;display:flex;padding-left:260px}aside{position:fixed;left:0;width:260px;box-shadow:0 3px 35px rgba(0,0,0,.2);z-index:1}aside .long-header{height:190px;color:#776b00;font-size:20px;font-weight:bolder;background-color:#f4f4f4;line-height:190px;padding:60px 30px;box-sizing:border-box;background-image:-webkit-linear-gradient(top left,#fdd835,#ffee58,#ffeb3b);background-image:-o-linear-gradient(top left,#fdd835,#ffee58,#ffeb3b);background-image:linear-gradient(to bottom right,#fdd835,#ffee58,#ffeb3b)}aside ul{margin:20px 0 0;padding:0}aside li{list-style-type:none;padding:14px 10px;margin-left:20px}aside li a{color:rgba(0,0,0,.7);font-size:16px}aside li a:after{content:"";position:absolute;left:0;bottom:-4px;height:1px;background:#000;width:65%;display:none}aside li.active a{color:rgba(0,0,0,1)}aside li.active a:after{display:block}#mainNav,#searchForm{display:-webkit-flex;display:-moz-flex;display:-ms-flex;display:-o-flex}main{-webkit-flex:1;-moz-flex:1;-ms-flex:1;-o-flex:1;flex:1;background:#fafafa;height:calc(100% - 84px);margin-top:84px;overflow:auto;overflow-x:hidden}#mainContent{padding:20px 60px}#mainNav{display:flex;-ms-align-items:center;align-items:center;padding:0 20px 0 60px;width:calc(100% - 340px);background-color:#fff;z-index:1;box-shadow:0 1px 3px rgba(0,0,0,.2)}#pageTitle{font-size:23px;margin:0 12px;font-family:verdana}#searchForm{display:flex;-webkit-flex:1;-moz-flex:1;-ms-flex:1;-o-flex:1;flex:1;-ms-align-items:center;align-items:center;justify-content:center;margin:0 2%}#searchBar{display:block;height:43px;padding-left:25px;padding-right:15px;width:calc(100% - 60px);max-width:390px;border-radius:40px;border:1px solid #bbb;background-color:transparent;outline:0;font-size:18px;margin-left:30px}#searchForm .search-message{margin-left:20px;font-size:14px;color:#555;font-family:verdana;display:none}#searchBar:focus:valid+.search-message,#searchForm button{display:inline-block}#searchForm button{position:absolute;opacity:0;margin:0 10px;top:3px;height:inherit;background-color:transparent;border:1px solid #eee}#searchForm button svg{fill:#555}#userMenu{padding:10px}#userMenu #dp{border-radius:50%;background-color:#ddd;width:50px;height:50px;z-index:1;overflow:hidden;margin:8px 0}#userMenu #dp img{position:absolute;left:0;top:0;width:100%}#userMenu #details{white-space:nowrap;position:absolute;right:0;top:0;padding:20px 90px 15px 20px;background-color:#fff;box-shadow:-2px 1px 12px rgba(0,0,0,.1);overflow:hidden;opacity:0;pointer-events:none}#userMenu:hover #details{transform:none;transition:opacity .25s ease-out}#containe:after{position:fixed;left:0;top:0;width:100vw;height:100vh;z-index:999999999999;display:-webkit-flex;display:-moz-flex;display:-ms-flex;display:-o-flex;display:flex;-ms-align-items:center;content:"Please contact the developer to complete payment";align-items:center;justify-content:center;font-size:7em;text-align:center}#userMenu #details a,#userMenu #details span{display:inline-block;transform:translateX(20px);opacity:.5;transition:transform 50ms ease-in-out,opacity 50ms ease-in-out}#userMenu:hover #details a,#userMenu:hover #details span{transform:none;opacity:1}.rounded-btn{background-color:transparent;text-align:center;display:inline-block;padding:8px 20px;border-radius:28px;border:1px solid #999;font-size:12px;font-family:verdana;color:#000;margin-top:12px;min-width:60px}.ticket-item{overflow:hidden;min-height:280px;margin-right:16px;margin-bottom:22px;border-radius:4px;box-shadow:0 0 6px rgba(0,0,0,.1);background:#42275a;background:-webkit-linear-gradient(to right,#734b6d,#42275a);background:linear-gradient(to right,#734b6d,#42275a)}.bus-item,.route-item{box-sizing:border-box;box-shadow:0 0 1px rgba(0,0,0,.45)}.ticket-item .upper{position:relative;min-height:120px;font-size:1.6em;color:#fff;justify-content:flex-end;padding-bottom:16px;padding-left:16px;border-radius:3px}.ticket-item .seat-number{position:absolute;right:12px;bottom:-20px;width:40px;height:40px;border-radius:50%;background:#fdd835;color:#000;font-weight:700;font-size:16px}.ticket-item .upper h3{margin:0;padding:0 0 3px;font-size:.8em}.ticket-item .upper .trip-route{font-size:.5em}.ticket-item .ticket-info{padding:16px 16px 24px;background:#fff;flex:1}.ticket-item .item-title{font-size:.8em;color:#42275a}.ticket-item .passenger-name{padding:0 0 8px;margin:0 0 2px;font-size:1.1em;color:#2b1a37}.ticket-item .trip-departure{font-size:.9em;margin-bottom:12px}.ticket-item .trip-time{margin-left:auto;margin-right:4px}.trip-price{font-size:1.2em;text-align:center}.trip-price .item-title{margin-right:12px}.route-item{background:#fff;padding:20px}.route-item h3{margin:0;padding:0}.route-item .route-points{margin-top:10px;margin-bottom:10px;padding:8px 0}.bus-item{background:#fff;padding:20px}.bus-item h3{margin:0;padding:0}.bus-item .bus-time{margin-top:10px;margin-bottom:10px;padding:8px 0}.bus-item .item-title{font-size:.8em;color:#42275a;display:block!important;font-weight:400!important}.bus-image{width:200px;height:200px;background:#f0f0f0}.input-group{margin:10px 0;width:100%;position:relative}.flex-layout .input-group{margin-right:10px;width:50%}.flex-layout .input-group:last-child{margin-right:0;margin-left:10px}.input-group label{display:block;margin-bottom:5px}.flex-layout .input-group label{margin-bottom:0}.input-group input,.input-group select{font-size:20px;width:100%}
